<?xml version="1.0"?>
<package format="3">
  <name>ros2_bag_to_image</name>
  <version>1.0.0</version>
  <description>ROS2 Bag To Image</description>

  <maintainer email="abrahammonrroy@yahoo.com">amc</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosbag2_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>boost</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
